--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,73 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400;700&display=swap");
+:root {
+  --bg-color: #000033;
+  --primary-color: #00ff9d;
+  --icon-color: #34c300;
+  --secondary-color: #ff00ff;
+  --accent-color: #ffff00;
+  --text-color: #d0fbd0;
+  --dark-bg: #0a0a2ab3;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.lineSection {
+  display: block;
+  border: 1px solid var(--accent-color);
+  width: 100%;
+  border-radius: 1px;
+  box-shadow: 0 0 4px var(--accent-color), 0 0 8px var(--accent-color), 0 0 16px var(--accent-color);
+  margin-bottom: 1em;
+}
+
+.icons {
+  fill: var(--icon-color);
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, auto);
+  grid-gap: 2rem;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  color: var(--text-color);
+  line-height: 1.6;
+  position: relative;
+  overflow-x: hidden;
+  background-color: #00030b;
+}
+
+.cyber-bg-img {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  opacity: 0.3;
+  z-index: -1;
+}
+.cyber-bg-img img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: translate(-50%, -50%);
+}
+
 .cyber-bg {
   position: fixed;
   top: 0;
@@ -18,72 +87,6 @@
   bottom: 0;
   background: radial-gradient(circle at 50% 50%, var(--secondary-color), transparent 50%), radial-gradient(circle at 10% 10%, var(--accent-color), transparent 30%);
   opacity: 0.1;
-}
-
-.nav {
-  position: fixed;
-  right: 2%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 2%;
-  z-index: 100;
-}
-.nav a {
-  height: 15px;
-  width: 15px;
-  background-color: #2b9206;
-  border-radius: 50%;
-  position: relative;
-  display: inline-block;
-}
-.nav a::before, .nav a::after {
-  content: "";
-  position: absolute;
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
-}
-.nav a::before {
-  background-color: unset;
-  top: -7px;
-  left: -7px;
-}
-.nav a.active {
-  box-shadow: 0 0 4px #34c300, 0 0 8px #34c300, 0 0 16px #34c300;
-  background-color: #1dff00;
-}
-
-.contacts {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-}
-.contacts button {
-  background-color: unset;
-  border: 1px solid #34c300;
-  box-shadow: 0 0 4px #34c300, 0 0 8px #34c300, inset 0 0 8px #34c300;
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  color: #34c300;
-  white-space: nowrap;
-}
-.contacts a {
-  display: flex;
-  gap: 6px;
-  align-items: center;
-  flex-wrap: wrap;
-  transition: box-shadow 0.3s, fill 0.3s, text-shadow 0.3s, color 0.3s;
-}
-.contacts a:hover {
-  color: #1dff00;
-  text-shadow: 0px 0px 4px #1dff00, 0px 0px 8px #1dff00, 0px 0px 16px #1dff00;
-}
-.contacts a:hover svg {
-  fill: #1dff00;
-  box-shadow: 0px 0px 4px #1dff00, 0px 0px 8px #1dff00, 0px 0px 16px #1dff00;
 }
 
 .my-skills__content {
@@ -110,242 +113,38 @@
   animation-play-state: paused;
 }
 
-#section1 {
-  padding-top: 20px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: flex-start;
-  min-height: 100vh;
-  height: 100%;
-}
-@media (max-width: 600px) {
-  #section1 {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-#section1 div {
-  width: 50%;
-  padding: 2%;
-  position: relative;
-}
-@media (max-width: 600px) {
-  #section1 div {
-    width: 80%;
-  }
-}
-#section1 p {
-  padding-top: 20px;
-}
-
-#section2 {
-  padding-top: 20px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: flex-start;
-  min-height: 100vh;
-  height: 100%;
-}
-@media (max-width: 600px) {
-  #section2 {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-#section2 div {
-  width: 50%;
-  padding: 2%;
-  position: relative;
-}
-@media (max-width: 600px) {
-  #section2 div {
-    width: 80%;
-  }
-}
-#section2 p {
-  padding-top: 20px;
-}
-
-#section3 {
-  padding-top: 20px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: flex-start;
-}
-@media (max-width: 600px) {
-  #section3 {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-#section3 p {
-  padding-top: 20px;
-}
-
-.my-project,
-.threeJs {
-  width: 50%;
-  padding: 2%;
-  position: relative;
-}
-
-.title {
-  padding-bottom: 4%;
-}
-.title h1 {
-  width: -moz-min-content;
-  width: min-content;
-  white-space: nowrap;
-}
-.title span {
-  bottom: 0;
-  top: auto;
-}
-
-.threeJs canvas {
-  width: 100% !important;
-  height: auto !important;
-}
-
-.my-project__content {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
-}
-
-.my-project__card {
-  border-radius: 10px;
-  border: 1px solid #34c300;
-  box-shadow: 0 0 4px #34c300, 0 0 8px #34c300, 0 0 16px #34c300;
-  overflow: hidden;
-  height: 350px;
-  width: 240px;
-  display: flex;
-  justify-content: center;
-}
-.my-project__card img {
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-@keyframes slide {
-  0% {
-    transform: translateX(0%);
-  }
-  100% {
-    transform: translateX(-50%);
-  }
-}
-.lineSection {
-  border: 1px solid #34c300;
-  width: 80%;
-  position: absolute;
-  top: 10px;
-  border-radius: 1px;
-  box-shadow: 0 0 4px #34c300, 0 0 8px #34c300, 0 0 16px #34c300;
-}
-
-.icons {
-  fill: #34c300;
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-}
-
-.BRR {
-  border: 2px solid #ff0000;
-}
-
-.BRB {
-  border: 2px solid #001eff;
-}
-
-.BRG {
-  border: 2px solid #3cff00;
-}
-
-:root {
-  --bg-color: #000033;
-  --primary-color: #00ff9d;
-  --secondary-color: #ff00ff;
-  --accent-color: #ffff00;
-  --text-color: #e0ffe0;
-  --dark-bg: #0a0a2ab3;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-  color: var(--text-color);
-  line-height: 1.6;
-  position: relative;
-  overflow-x: hidden;
-  background-color: #00030b;
-}
-
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  pointer-events: none;
-  z-index: -1;
-  animation: scanlines 10s linear infinite;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 2rem;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, auto);
-  grid-gap: 2rem;
-}
-
-.header-content {
-  grid-column: 1/3;
-  background: var(--dark-bg);
-  padding: 2rem;
-  border-radius: 10px;
-  box-shadow: 0 0 20px rgba(0, 255, 157, 0.3);
-  background: linear-gradient(135deg, rgba(28, 31, 79, 0.26), rgba(174, 174, 174, 0.1));
-  -webkit-backdrop-filter: blur(2px);
-          backdrop-filter: blur(2px);
-  border: 1px solid rgba(255, 255, 255, 0.168627451);
-}
-.header-content:hover {
-  box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
-  border: 1px solid #0019a1;
-}
-
 .headrProfPhoto {
-  background: var(--dark-bg);
   padding: 2rem;
   display: flex;
-  border-radius: 10px;
-  box-shadow: 0 0 20px rgba(0, 255, 157, 0.3);
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 .headrProfPhoto:hover {
   box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
   border: 1px solid #0019a1;
+}
+.headrProfPhoto button {
+  position: absolute;
+  top: 2%;
+  right: 3%;
+  height: 21px;
+  width: 31px;
+  background-color: rgba(0, 255, 157, 0.1);
+  color: var(--primary-color);
+  border-radius: 4px;
+  border: 1px solid var(--primary-color);
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 800;
+}
+.headrProfPhoto button:hover {
+  background-color: var(--primary-color);
+  color: #b300ff;
+  box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
+  border: 1px solid #a10066;
 }
 
 .profile-photo {
@@ -357,6 +156,7 @@ body::before {
   border: 3px solid var(--primary-color);
   box-shadow: 0 0 20px rgba(0, 255, 157, 0.5);
   position: relative;
+  z-index: 100;
 }
 
 .profile-photo img {
@@ -370,11 +170,12 @@ body::before {
 .profile-photo::before {
   content: "";
   position: absolute;
+  opacity: 0.15;
   top: -50%;
   left: -50%;
   width: 200%;
   height: 200%;
-  background: conic-gradient(from 0deg, transparent, var(--primary-color), transparent 30%);
+  background: conic-gradient(from 0deg, transparent, #ff0000, transparent 30%);
   animation: rotateHolo 10s linear infinite;
 }
 
@@ -388,16 +189,13 @@ body::before {
   font-size: 2.5rem;
   color: var(--primary-color);
   margin-bottom: 0.5rem;
-  text-transform: uppercase;
   letter-spacing: 3px;
-  text-shadow: 0 0 10px rgba(0, 255, 157, 0.7);
 }
 
 .title {
   font-size: 1.2rem;
   color: var(--secondary-color);
   margin-bottom: 1rem;
-  text-transform: uppercase;
   letter-spacing: 2px;
 }
 
@@ -412,13 +210,13 @@ section {
   background-color: var(--dark-bg);
   padding: 1.5rem;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 255, 157, 0.2);
-  transition: border 0.3s ease;
-  border: 1px solid rgba(0, 25, 161, 0.5411764706);
+  box-shadow: 0 0 20px rgba(0, 255, 157, 0.3);
+  background: linear-gradient(135deg, rgba(28, 31, 79, 0.26), rgba(174, 174, 174, 0.1));
+  -webkit-backdrop-filter: blur(6px);
+  backdrop-filter: blur(6px);
+  border: 1px solid rgba(255, 255, 255, 0.168627451);
 }
 section:hover {
-  box-shadow: 0 0 20px rgba(0, 255, 157, 0.4);
-  transform: translateY(-5px);
   box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
   border: 1px solid #0019a1;
 }
@@ -427,8 +225,6 @@ h2 {
   font-family: "Orbitron", sans-serif;
   font-size: 1.5rem;
   color: var(--primary-color);
-  margin-bottom: 1rem;
-  border-bottom: 2px solid var(--accent-color);
   padding-bottom: 0.5rem;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -438,8 +234,7 @@ h2 {
   grid-column: 1/4;
   overflow: hidden;
   width: 100%;
-  box-shadow: inset 0 0 2px #181313, inset 0 0 4px #181313, inset 0 0 8px #181313;
-  background: linear-gradient(to top, #181313, rgba(1, 12, 115, 0.7019607843), #181313);
+  background: linear-gradient(to top, rgba(24, 19, 19, 0), rgba(1, 12, 115, 0.7019607843), rgba(24, 19, 19, 0));
 }
 
 .skills {
@@ -457,7 +252,6 @@ h2 {
   border: 1px solid var(--primary-color);
   transition: all 0.3s ease;
 }
-
 .skill:hover {
   background-color: var(--primary-color);
   color: #00bcff;
@@ -503,8 +297,8 @@ h2 {
 
 .project-item:hover,
 .work-item:hover {
-  background-color: rgba(0, 255, 157, 0.1);
-  box-shadow: 0 0 15px rgba(127, 255, 0, 0.5);
+  box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
+  border: 1px solid #0019a1;
 }
 
 .project-title,
@@ -517,7 +311,6 @@ h2 {
 .project-description,
 .work-description {
   font-size: 0.9rem;
-  color: var(--text-color);
 }
 
 .work-image {
@@ -566,7 +359,11 @@ h2 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  display: flex;
   text-align: center;
+  width: 80%;
+  flex-direction: column;
+  align-items: center;
 }
 
 .contact-item {
@@ -646,5 +443,79 @@ a:hover {
   }
   .profile-photo {
     margin-bottom: 1rem;
+  }
+}
+.nav {
+  position: fixed;
+  right: 2%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2%;
+  z-index: 100;
+}
+.nav a {
+  height: 15px;
+  width: 15px;
+  background-color: #2b9206;
+  border-radius: 50%;
+  position: relative;
+  display: inline-block;
+}
+.nav a::before, .nav a::after {
+  content: "";
+  position: absolute;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+}
+.nav a::before {
+  background-color: unset;
+  top: -7px;
+  left: -7px;
+}
+.nav a.active {
+  box-shadow: 0 0 4px var(--icon-color), 0 0 8px var(--icon-color), 0 0 16px var(--icon-color);
+  background-color: var(--icon-color);
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+.command-line {
+  position: relative;
+  padding-left: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.command-line::before {
+  content: ">";
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.cursor {
+  display: inline-block;
+  width: 10px;
+  height: 20px;
+  background-color: #00ff00;
+  animation: blink 0.7s infinite;
+  margin-left: 2px;
+}
+
+@keyframes blink {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
   }
 }/*# sourceMappingURL=index.css.map */
