--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,40 +1,76 @@
-$backСolor: #181313;
-$mainСolor: #34c300;
-$backlight: #1dff00;
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400;700&display=swap");
 
-// * {
-//   margin: 0;
-//   padding: 0;
-//   box-sizing: border-box;
-// }
-// a {
-//   text-decoration: none;
-//   color: inherit;
-// }
-// ul,
-// ol {
-//   list-style: none;
-// }
-// h1,
-// h2,
-// h3 {
-//   font-weight: normal;
-// }
-// html {
-//   scroll-behavior: smooth;
-// }
-// h1 {
-//   font-size: 2em;
-// }
+:root {
+  --bg-color: #000033;
+  --primary-color: #00ff9d;
+  --icon-color: #34c300;
+  --secondary-color: #ff00ff;
+  --accent-color: #ffff00;
+  --text-color: #d0fbd0;
+  --dark-bg: #0a0a2ab3;
+}
 
-// body {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   background-color: $backСolor;
-//   color: $mainСolor;
-// }
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+// общие
+.lineSection {
+  display: block;
+  border: 1px solid var(--accent-color);
+  width: 100%;
+  border-radius: 1px;
+  box-shadow: 0 0 4px var(--accent-color), 0 0 8px var(--accent-color),
+    0 0 16px var(--accent-color);
+  margin-bottom: 1em;
+}
 
+.icons {
+  fill: var(--icon-color);
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, auto);
+  grid-gap: 2rem;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  color: var(--text-color);
+  line-height: 1.6;
+  position: relative;
+  overflow-x: hidden;
+  background-color: #00030b;
+}
+
+// фоновое изображени
+.cyber-bg-img {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  opacity: 0.3;
+  z-index: -1;
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    transform: translate(-50%, -50%);
+  }
+}
+
+// фоновая анимация
 .cyber-bg {
   position: fixed;
   top: 0;
@@ -68,142 +104,6 @@ $backlight: #1dff00;
   }
 }
 
-.nav {
-  position: fixed;
-  right: 2%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 2%;
-  z-index: 100;
-
-  a {
-    height: 15px;
-    width: 15px;
-    background-color: #2b9206;
-    border-radius: 50%;
-
-    position: relative;
-    display: inline-block;
-
-    &::before,
-    &::after {
-      content: "";
-      position: absolute;
-      height: 30px;
-      width: 30px;
-      border-radius: 50%;
-    }
-
-    &::before {
-      background-color: unset;
-      top: -7px;
-      left: -7px;
-    }
-
-    &.active {
-      box-shadow: 0 0 4px $mainСolor, 0 0 8px $mainСolor, 0 0 16px $mainСolor;
-      background-color: $backlight;
-    }
-  }
-  // }
-}
-// section {
-//   height: 100vh;
-//   max-width: 1400px;
-//   width: 100%;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   position: relative;
-// }
-
-// #section0 {
-//   overflow: hidden;
-// }
-// .foto-face {
-//   position: absolute;
-//   top: 10%;
-//   left: 50%;
-//   height: 90%;
-//   width: auto;
-//   object-fit: cover;
-//   transform: translateX(-50%);
-// }
-
-// .foto {
-//   width: 100%;
-//   height: 92%;
-//   position: relative;
-//   overflow: hidden;
-// }
-// .perform {
-//   position: absolute;
-//   top: 0;
-//   width: 100%;
-//   height: 100%;
-//   display: flex;
-//   flex-direction: row;
-//   justify-content: space-between;
-//   padding: 2%;
-// }
-// .dopInfo {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: space-between;
-//   height: 90%;
-//   align-items: flex-end;
-//   div {
-//     display: flex;
-//     align-items: center;
-//     gap: 6px;
-//   }
-// }
-
-.contacts {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-  button {
-    background-color: unset;
-    border: 1px solid $mainСolor;
-    box-shadow: 0 0 4px $mainСolor, 0 0 8px $mainСolor, inset 0 0 8px $mainСolor;
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    color: $mainСolor;
-    white-space: nowrap;
-  }
-  a {
-    display: flex;
-    gap: 6px;
-    align-items: center;
-    flex-wrap: wrap;
-    transition: box-shadow 0.3s, fill 0.3s, text-shadow 0.3s, color 0.3s;
-    &:hover {
-      color: $backlight;
-      text-shadow: 0px 0px 4px $backlight, 0px 0px 8px $backlight,
-        0px 0px 16px $backlight;
-    }
-    &:hover svg {
-      fill: $backlight;
-      box-shadow: 0px 0px 4px $backlight, 0px 0px 8px $backlight,
-        0px 0px 16px $backlight;
-    }
-  }
-}
-
-// .skilRunLine {
-//   overflow: hidden;
-//   width: 100%;
-//   flex-grow: 1;
-//   box-shadow: inset 0 0 2px $backСolor, inset 0 0 4px $backСolor,
-//     inset 0 0 8px $backСolor;
-
-//   background: linear-gradient(to top, $backСolor, $mainСolor, $backСolor);
-//   border-radius: 40px;
-// }
 .my-skills__content {
   display: flex;
   width: 200%;
@@ -227,315 +127,38 @@ $backlight: #1dff00;
     animation-play-state: paused;
   }
 }
-#section1 {
-  padding-top: 20px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: flex-start;
-  min-height: 100vh;
-  height: 100%;
-  @media (max-width: 600px) {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  div {
-    width: 50%;
-    padding: 2%;
-    position: relative;
-    @media (max-width: 600px) {
-      width: 80%;
-    }
-  }
-  p {
-    padding-top: 20px;
-  }
-}
-
-#section2 {
-  padding-top: 20px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: flex-start;
-  min-height: 100vh;
-  height: 100%;
-  @media (max-width: 600px) {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  div {
-    width: 50%;
-    padding: 2%;
-    position: relative;
-    @media (max-width: 600px) {
-      width: 80%;
-    }
-  }
-  p {
-    padding-top: 20px;
-  }
-}
-
-#section3 {
-  padding-top: 20px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: flex-start;
-
-  @media (max-width: 600px) {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  p {
-    padding-top: 20px;
-  }
-}
-
-.my-project,
-.threeJs {
-  width: 50%;
-  padding: 2%;
-  position: relative;
-}
-
-.title {
-  padding-bottom: 4%;
-  h1 {
-    width: min-content;
-    // text-wrap: nowrap;
-    white-space: nowrap;
-  }
-  span {
-    bottom: 0;
-    top: auto;
-  }
-}
-
-.threeJs {
-  canvas {
-    width: 100% !important;
-    height: auto !important;
-  }
-}
-
-.my-project__content {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
-}
-.my-project__card {
-  border-radius: 10px;
-  border: 1px solid $mainСolor;
-  box-shadow: 0 0 4px $mainСolor, 0 0 8px $mainСolor, 0 0 16px $mainСolor;
-  overflow: hidden;
-  height: 350px;
-  width: 240px;
-  display: flex;
-  justify-content: center;
-
-  img {
-    height: 100%;
-    object-fit: cover;
-  }
-}
-
-@keyframes slide {
-  0% {
-    transform: translateX(0%);
-  }
-  100% {
-    transform: translateX(-50%);
-  }
-}
-
-@media (max-width: 600px) {
-}
-
-.lineSection {
-  border: 1px solid $mainСolor;
-  width: 80%;
-  position: absolute;
-  top: 10px;
-  border-radius: 1px;
-  box-shadow: 0 0 4px $mainСolor, 0 0 8px $mainСolor, 0 0 16px $mainСolor;
-}
-
-.icons {
-  fill: $mainСolor;
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-}
-.BRR {
-  border: 2px solid #ff0000;
-}
-.BRB {
-  border: 2px solid #001eff;
-}
-.BRG {
-  border: 2px solid #3cff00;
-}
-
-// ====================================================================
-@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400;700&display=swap");
-
-:root {
-  --bg-color: #000033;
-  --primary-color: #00ff9d;
-  --secondary-color: #ff00ff;
-  --accent-color: #ffff00;
-  --text-color: #e0ffe0;
-  --dark-bg: #0a0a2ab3;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-// body {
-//   font-family: "Roboto", sans-serif;
-//   background-color: var(--bg-color);
-//   color: var(--text-color);
-//   line-height: 1.6;
-//   background-image: linear-gradient(45deg, var(--dark-bg) 25%, transparent 25%),
-//     linear-gradient(-45deg, var(--dark-bg) 25%, transparent 25%),
-//     linear-gradient(45deg, transparent 75%, var(--dark-bg) 75%),
-//     linear-gradient(-45deg, transparent 75%, var(--dark-bg) 75%);
-//   background-size: 20px 20px;
-//   background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
-// }
-
-body {
-  font-family: "Roboto", sans-serif;
-  // background-color: var(--bg-color);
-  // background-image: linear-gradient(
-  //     to right,
-  //     rgba(0, 255, 157, 0.1) 1px,
-  //     transparent 1px
-  //   ),
-  //   linear-gradient(to bottom, rgba(0, 255, 157, 0.1) 1px, transparent 1px),
-  //   radial-gradient(
-  //     circle at 50% 50%,
-  //     rgba(0, 255, 157, 0.05) 0%,
-  //     transparent 50%
-  //   ),
-  //   radial-gradient(
-  //     circle at 10% 10%,
-  //     rgba(127, 255, 0, 0.05) 0%,
-  //     transparent 30%
-  //   ),
-  //   radial-gradient(
-  //     circle at 90% 90%,
-  //     rgba(57, 255, 20, 0.05) 0%,
-  //     transparent 30%
-  //   );
-
-  // background: linear-gradient(
-  //       to right,
-  //       var(--primary-color) 1px,
-  //       transparent 1px
-  //     )
-  //     0 0 / 20px 20px,
-  //   linear-gradient(to bottom, var(--primary-color) 1px, transparent 1px) 0 0 /
-  //     20px 20px;
-
-  // background-size: 50px 50px, 50px 50px, 100% 100%, 100% 100%, 100% 100%;
-  color: var(--text-color);
-  line-height: 1.6;
-  position: relative;
-  overflow-x: hidden;
-  background-color: #00030b;
-}
-
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  // background: repeating-linear-gradient(
-  //     to right,
-  //     transparent,
-  //     transparent 2px,
-  //     rgba(0, 255, 157, 0.03) 2px,
-  //     rgba(0, 255, 157, 0.03) 4px
-  //   ),
-  //   repeating-linear-gradient(
-  //     to bottom,
-  //     transparent,
-  //     transparent 2px,
-  //     rgba(0, 255, 157, 0.03) 2px,
-  //     rgba(0, 255, 157, 0.03) 4px
-  //   );
-  pointer-events: none;
-  z-index: -1;
-  animation: scanlines 10s linear infinite;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 2rem;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, auto);
-  grid-gap: 2rem;
-}
-
-// header {
-//   grid-column: 1 / -1;
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   margin-bottom: 2rem;
-//   background: var(--dark-bg);
-//   padding: 2rem;
-//   border-radius: 10px;
-//   box-shadow: 0 0 20px rgba(0, 255, 157, 0.3);
-// }
-
-.header-content {
-  grid-column: 1 / 3;
-  background: var(--dark-bg);
-  padding: 2rem;
-  border-radius: 10px;
-  box-shadow: 0 0 20px rgba(0, 255, 157, 0.3);
-  background: linear-gradient(
-    135deg,
-    rgb(28 31 79 / 26%),
-    rgb(174 174 174 / 10%)
-  );
-  backdrop-filter: blur(2px);
-  border: 1px solid rgba(255, 255, 255, 0.168627451);
-  &:hover {
-    box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
-    border: 1px solid #0019a1;
-  }
-}
 
 .headrProfPhoto {
-  background: var(--dark-bg);
   padding: 2rem;
   display: flex;
-  border-radius: 10px;
-  box-shadow: 0 0 20px rgba(0, 255, 157, 0.3);
   justify-content: center;
   align-items: center;
+  position: relative;
   &:hover {
     box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
     border: 1px solid #0019a1;
+  }
+  button {
+    position: absolute;
+    top: 2%;
+    right: 3%;
+    height: 21px;
+    width: 31px;
+    background-color: rgba(0, 255, 157, 0.1);
+    color: var(--primary-color);
+    border-radius: 4px;
+    border: 1px solid var(--primary-color);
+    transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 800;
+    &:hover {
+      background-color: var(--primary-color);
+      color: #b300ff;
+      box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
+      border: 1px solid #a10066;
+    }
   }
 }
 .profile-photo {
@@ -547,6 +170,7 @@ body::before {
   border: 3px solid var(--primary-color);
   box-shadow: 0 0 20px rgba(0, 255, 157, 0.5);
   position: relative;
+  z-index: 100;
 }
 
 .profile-photo img {
@@ -559,16 +183,12 @@ body::before {
 .profile-photo::before {
   content: "";
   position: absolute;
+  opacity: 0.15;
   top: -50%;
   left: -50%;
   width: 200%;
   height: 200%;
-  background: conic-gradient(
-    from 0deg,
-    transparent,
-    var(--primary-color),
-    transparent 30%
-  );
+  background: conic-gradient(from 0deg, transparent, #ff0000, transparent 30%);
   animation: rotateHolo 10s linear infinite;
 }
 
@@ -583,16 +203,14 @@ body::before {
   font-size: 2.5rem;
   color: var(--primary-color);
   margin-bottom: 0.5rem;
-  text-transform: uppercase;
   letter-spacing: 3px;
-  text-shadow: 0 0 10px rgba(0, 255, 157, 0.7);
 }
 
 .title {
   font-size: 1.2rem;
   color: var(--secondary-color);
   margin-bottom: 1rem;
-  text-transform: uppercase;
+  // text-transform: uppercase;
   letter-spacing: 2px;
 }
 
@@ -607,30 +225,27 @@ section {
   background-color: var(--dark-bg);
   padding: 1.5rem;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 255, 157, 0.2);
-  transition: border 0.3s ease;
-  border: 1px solid #0019a18a;
+  box-shadow: 0 0 20px rgba(0, 255, 157, 0.3);
+  background: linear-gradient(
+    135deg,
+    rgba(28, 31, 79, 0.26),
+    rgba(174, 174, 174, 0.1)
+  );
+  -webkit-backdrop-filter: blur(6px);
+  backdrop-filter: blur(6px);
+  border: 1px solid rgba(255, 255, 255, 0.168627451);
+
   &:hover {
-    box-shadow: 0 0 20px rgba(0, 255, 157, 0.4);
-    transform: translateY(-5px);
     box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
     border: 1px solid #0019a1;
   }
 }
 
-// section:hover {
-//   box-shadow: 0 0 20px rgba(0, 255, 157, 0.4);
-//   transform: translateY(-5px);
-//   box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
-//   border: 1px solid #0019a1;
-// }
-
 h2 {
   font-family: "Orbitron", sans-serif;
   font-size: 1.5rem;
   color: var(--primary-color);
-  margin-bottom: 1rem;
-  border-bottom: 2px solid var(--accent-color);
+
   padding-bottom: 0.5rem;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -640,9 +255,12 @@ h2 {
   grid-column: 1 / 4;
   overflow: hidden;
   width: 100%;
-  box-shadow: inset 0 0 2px #181313, inset 0 0 4px #181313,
-    inset 0 0 8px #181313;
-  background: linear-gradient(to top, #181313, #010c73b3, #181313);
+  background: linear-gradient(
+    to top,
+    #18131300,
+    rgba(1, 12, 115, 0.7019607843),
+    #18131300
+  );
 }
 
 .skills {
@@ -659,13 +277,12 @@ h2 {
   font-size: 0.9rem;
   border: 1px solid var(--primary-color);
   transition: all 0.3s ease;
-}
-
-.skill:hover {
-  background-color: var(--primary-color);
-  color: #00bcff;
-  box-shadow: 0 0 10px rgb(184 0 255 / 70%);
-  border: 1px solid #0019a1;
+  &:hover {
+    background-color: var(--primary-color);
+    color: #00bcff;
+    box-shadow: 0 0 10px rgb(184 0 255 / 70%);
+    border: 1px solid #0019a1;
+  }
 }
 
 .experience-item,
@@ -706,8 +323,8 @@ h2 {
 
 .project-item:hover,
 .work-item:hover {
-  background-color: rgba(0, 255, 157, 0.1);
-  box-shadow: 0 0 15px rgba(127, 255, 0, 0.5);
+  box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
+  border: 1px solid #0019a1;
 }
 
 .project-title,
@@ -720,7 +337,6 @@ h2 {
 .project-description,
 .work-description {
   font-size: 0.9rem;
-  color: var(--text-color);
 }
 
 .work-image {
@@ -769,7 +385,11 @@ h2 {
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  display: flex;
   text-align: center;
+  width: 80%;
+  flex-direction: column;
+  align-items: center;
 }
 
 .contact-item {
@@ -862,4 +482,88 @@ a:hover {
     margin-bottom: 1rem;
   }
 }
+
+.nav {
+  position: fixed;
+  right: 2%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2%;
+  z-index: 100;
+
+  a {
+    height: 15px;
+    width: 15px;
+    background-color: #2b9206;
+    border-radius: 50%;
+
+    position: relative;
+    display: inline-block;
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      height: 30px;
+      width: 30px;
+      border-radius: 50%;
+    }
+
+    &::before {
+      background-color: unset;
+      top: -7px;
+      left: -7px;
+    }
+
+    &.active {
+      box-shadow: 0 0 4px var(--icon-color), 0 0 8px var(--icon-color),
+        0 0 16px var(--icon-color);
+      background-color: var(--icon-color);
+    }
+  }
+}
 // ====================================================================
+
+@keyframes slide {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.command-line {
+  position: relative;
+  padding-left: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.command-line::before {
+  content: ">";
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.cursor {
+  display: inline-block;
+  width: 10px;
+  height: 20px;
+  background-color: #00ff00;
+  animation: blink 0.7s infinite;
+  margin-left: 2px;
+}
+
+@keyframes blink {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+}
