--- a/src/css/index.css
+++ b/src/css/index.css
@@ -291,11 +291,23 @@ h2 {
   font-style: italic;
 }
 
-.projects-grid,
+.statistics-grid,
 .works-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 1rem;
+}
+
+.statistics-grid {
+  width: auto;
+}
+.statistics-grid a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.statistics-grid img {
+  width: 100%;
 }
 
 .project-item,
@@ -411,8 +423,8 @@ a:hover {
   grid-area: education;
 }
 
-#projects {
-  grid-area: projects;
+#statistics {
+  grid-area: statistics;
 }
 
 #works {
@@ -424,13 +436,13 @@ a:hover {
 }
 
 .container {
-  grid-template-areas: "header-content header-content headrProfPhoto" "skilRunLine skilRunLine skilRunLine" "skills experience projects" "education works works" "contact works works";
+  grid-template-areas: "header-content header-content headrProfPhoto" "skilRunLine skilRunLine skilRunLine" "skills experience statistics" "education works works" "contact works works";
 }
 
 @media (max-width: 900px) {
   .container {
     grid-template-columns: 1fr;
-    grid-template-areas: "headrProfPhoto" "header-content" "skilRunLine" "skills" "experience" "education" "projects" "works" "contact";
+    grid-template-areas: "headrProfPhoto" "header-content" "skilRunLine" "skills" "experience" "education" "statistics" "works" "contact";
   }
   header {
     flex-direction: column;
