--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -319,11 +319,23 @@ h2 {
   font-style: italic;
 }
 
-.projects-grid,
+.statistics-grid,
 .works-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 1rem;
+}
+
+.statistics-grid {
+  width: auto;
+  a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  img {
+    width: 100%;
+  }
 }
 
 .project-item,
@@ -436,8 +448,8 @@ a:hover {
 #education {
   grid-area: education;
 }
-#projects {
-  grid-area: projects;
+#statistics {
+  grid-area: statistics;
 }
 #works {
   grid-area: works;
@@ -450,7 +462,7 @@ a:hover {
   grid-template-areas:
     "header-content header-content headrProfPhoto"
     "skilRunLine skilRunLine skilRunLine"
-    "skills experience projects"
+    "skills experience statistics"
     "education works works"
     "contact works works";
 }
@@ -465,7 +477,7 @@ a:hover {
       "skills"
       "experience"
       "education"
-      "projects"
+      "statistics"
       "works"
       "contact";
   }
