--- a/src/css/index.css
+++ b/src/css/index.css
@@ -211,7 +211,7 @@ body {
   font-size: 1rem;
   color: var(--text-color);
   margin-bottom: 1rem;
-  text-shadow: 0 0 5px rgba(224, 255, 224, 0.5);
+  text-shadow: -1px -1px 2px rgba(255, 0, 252, 0.5490196078), 1px 1px 2px rgba(228, 255, 0, 0.5882352941);
 }
 
 section {
