--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -228,7 +228,7 @@ body {
   font-size: 1rem;
   color: var(--text-color);
   margin-bottom: 1rem;
-  text-shadow: 0 0 5px rgba(224, 255, 224, 0.5);
+  text-shadow: -1px -1px 2px #ff00fc8c, 1px 1px 2px #e4ff0096;
 }
 
 section {
