--- a/src/css/index.css
+++ b/src/css/index.css
@@ -269,16 +269,19 @@ h2 {
 }
 
 .experience-item,
+.otherSkills-grid,
 .education-item {
   margin-bottom: 1rem;
   padding-left: 1rem;
   border-left: 2px solid var(--secondary-color);
 }
 .experience-item ul li,
+.otherSkills-grid ul li,
 .education-item ul li {
   font-size: 13px;
 }
 .experience-item h3,
+.otherSkills-grid h3,
 .education-item h3 {
   font-size: 1.1rem;
   color: var(--secondary-color);
